[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/player_ui.gd" id="1_exbfu"]

[node name="PlayerUI" type="CanvasLayer"]
script = ExtResource("1_exbfu")

[node name="PlayerInfo" type="Control" parent="."]
layout_mode = 3
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -150.0
offset_right = 150.0
offset_bottom = 100.0
grow_horizontal = 2

[node name="LevelLabel" type="Label" parent="PlayerInfo"]
layout_mode = 0
offset_left = 50.0
offset_top = 10.0
offset_right = 250.0
offset_bottom = 36.0
text = "Level: 1"
horizontal_alignment = 1

[node name="XPBar" type="ProgressBar" parent="PlayerInfo"]
layout_mode = 0
offset_left = 50.0
offset_top = 40.0
offset_right = 250.0
offset_bottom = 67.0
value = 50.0

[node name="PercentLabel" type="Label" parent="PlayerInfo/XPBar"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -13.0
offset_right = 20.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
text = "50%"
horizontal_alignment = 1

[node name="HealthBar" type="ProgressBar" parent="PlayerInfo"]
layout_mode = 0
offset_left = 50.0
offset_top = 70.0
offset_right = 250.0
offset_bottom = 97.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
value = 100.0
show_percentage = false

[node name="HealthLabel" type="Label" parent="PlayerInfo/HealthBar"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -13.0
offset_right = 20.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
text = "100/100"
horizontal_alignment = 1

[node name="ResourceInfo" type="Control" parent="."]
layout_mode = 3
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -150.0
offset_bottom = 50.0
grow_horizontal = 0

[node name="GoldIcon" type="Label" parent="ResourceInfo"]
layout_mode = 0
offset_left = -80.0
offset_top = 10.0
offset_right = -40.0
offset_bottom = 36.0
theme_override_colors/font_color = Color(1, 0.843137, 0, 1)
text = "Gold:"
horizontal_alignment = 2

[node name="GoldLabel" type="Label" parent="ResourceInfo"]
layout_mode = 0
offset_left = -40.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = 36.0
text = "100"

[node name="TowerCountIcon" type="Label" parent="ResourceInfo"]
layout_mode = 0
offset_left = -80.0
offset_top = 40.0
offset_right = -40.0
offset_bottom = 66.0
theme_override_colors/font_color = Color(0.2, 0.4, 0.8, 1)
text = "TÃ¼rme:"
horizontal_alignment = 2

[node name="TowerCountLabel" type="Label" parent="ResourceInfo"]
layout_mode = 0
offset_left = -40.0
offset_top = 40.0
offset_right = -10.0
offset_bottom = 66.0
text = "0"